# DotNetExpat

./: DotNetExpat.sln  README.md
DotNetExpat/: CMakeLists.txt
DotNetExpat.Bindings/: ExpatError.cs  ExpatParser.cs  ExpatStatus.cs  Native.cs  Utilities.cs
DotNetExpat.Bindings.Test/: DotNetExpat.Bindings.Test.csproj  ExpatTest.cs  UnitTest1.cs
DotNetExpat/DotNetExpat/: CMakeLists.txt
DotNetExpat/DotNetExpat/src/: DllMain.cpp  DllMain.h
